2000-04-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* Makefile (RELEASE): Changelog changed to ChangeLog
	(release): now specifying filename in cmd line to tar rather than
	redirecting into file

2000-04-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-version): updated version to 2.2

2000-04-21  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el: Use a slightly silly way to check if a face is already
	defined.  Emacs uses internal-find-face, XEmacs uses find-face, so 
	we just call member on (face-list) which both support.

2000-04-18  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-completing-read-list): added &optional
	initial-input, which gets passed through to completing-read.
	(tnt-expand-groups-for-chat-invitation): needed to make it apply
	'append, rather than simply append, since what we have is a list
	of lists.
	(tnt-send-text-as-chat-invitation): now using a while loop to keep
	prompting the user until expanding groups does not change the list.

2000-04-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-expand-groups-for-chat-invitation): oops.
	tnt-online-buddies-collection was not in the format i needed.  now
	doing the correct thing, using the alist, but checking each buddy
	to see if they're currently online.

2000-04-15  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-expand-groups-for-chat-invitation): was assuming
	tnt-buddy-alist contains only online buddies.  in fact it also
	contains buddies who have been online and signed off.  now calling
	tnt-online-buddies-collection instead.

2000-04-13  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-config-to-blist): fixed paren typo.

2000-04-13  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-buddy-alist): moved declaration earlier to avoid
	compiler complaining.

2000-04-13  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-turn-on-debugging): added
	(tnt-turn-off-debugging): added